# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envoke"
version = "0.3.1"
description = "the python macro package"
readme = "README.md"
authors = [{ name = "Kian McKenna", email = "kian@mckenna.cloud" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["macro", "keyboard", "input", "automation"]
dependencies = [
    "pyautogui == 0.9.54"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/cowboycodr/envoke"
Repository = "https://github.com/cowboycodr/envoke"